<resources>
    <string name="app_name" translatable="false">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="weather" translatable="false">WEATHER</string>
    <string name="forecast" translatable="false">FORECAST</string>
    <string name="image_of_the_logo" translatable="false">Image of the logo</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="day" translatable="false">Day</string>
    <string name="temperature">temperature</string>
    <string name="hour" translatable="false">hour</string>
    <string name="name_of_the_city" translatable="false">name of the city</string>
    <string name="date_and_time" translatable="false">date and time</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="save">Save</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="cloud">Clouds</string>
    <string name="ultra_violet">Ultraviolet</string>
    <string name="visibility">Visibility</string>
    <string name="sunrise">Sunrise</string>
    <string name="weather_for_next_48_hours">The next 48 hours</string>
    <string name="weather_for_the_next_7_days">The next 7 days</string>
    <string name="no_places">No Places</string>
    <string name="cancel">Cancel</string>
    <string name="sunset">Sunset</string>
    <string name="today">Today</string>
    <string name="ok">Ok</string>
    <string name="warning">you must allow weather forecast to access the location of this device to make it work</string>
    <string name="celsius_text">°C</string>
    <string name="fahrenheit_text">°F</string>
    <string name="kelvin_text">°K</string>
</resources>