<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.weatherforecast.ui.splash.SplashFragment"
        android:label="SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weatherforecast.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_mapFragment"
            app:destination="@id/mapFragment" />


    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.weatherforecast.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favoritesFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_favoritesFragment_to_homeFavoriteFragment"
            app:destination="@id/homeFavoriteFragment" />


    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.weatherforecast.ui.map.MapFragment"
        android:label="Map"
        tools:layout="@layout/fragment_map"/>
    <fragment
        android:id="@+id/alertsFragment"
        android:name="com.example.weatherforecast.ui.alerts.AlertsFragment"
        android:label="@string/alerts"
        tools:layout="@layout/fragment_alerts"/>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weatherforecast.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>
    <fragment
        android:id="@+id/homeFavoriteFragment"
        android:name="com.example.weatherforecast.ui.homefavorites.HomeFavoriteFragment"
        android:label="Display Favorites"
        tools:layout="@layout/fragment_home_favorite">
    <argument
        android:name="currentPlace"
        app:argType="com.example.weatherforecast.datasource.local.FavoritesEntity"
        />
    </fragment>

</navigation>